# semantic-mail

./: .env.example  .gitignore  LICENSE.txt  README.md  main.py  pyproject.toml  setup.py
src/: cli.py  config.py  models.py
src/answering/: __init__.py  base_llm.py  llm_factory.py  ollama_llm.py  openai_llm.py
src/auth/: gmail_auth.py
src/embedding/: __init__.py  base_embedder.py  embedder_factory.py  ollama_embedder.py  openai_embedder.py  simplify_html.py
src/search/: chroma_client.py  searcher.py  vector_store.py
src/sync/: gmail_sync.py
